--- a/frontend/src/pages/chat.css
+++ b/frontend/src/pages/chat.css
@@ -12,16 +12,16 @@
   }
   
   .ce-chat-list {
-    background-color: rgb(240, 240, 240) !important;
+    background-color: rgb(24, 23, 24) !important;
   }
   
   .ce-chats-container {
-    background-color: rgb(240, 240, 240) !important;
+    background-color: rgb(24, 23, 24) !important;
   }
   
   .ce-active-chat-card {
-    background-color: #cabcdc !important;
-    border: 4px solid #cabcdc !important;
+    background-color: #6525ba !important;
+    border: 4px solid #8e077e !important;
     border-radius: 0px !important;
   }
   
@@ -35,7 +35,7 @@
   
   .ce-text-input {
     border-radius: 6px !important;
-    border: 1px solid #3b2a50 !important;
+    border: 1px solid #4e16a1 !important;
   }
   
   .ce-primary-button {
@@ -79,7 +79,7 @@
     height: 100%;
     width: 100%;
     overflow: scroll;
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(53, 15, 168);
   }
   
   .chat-title-container {
@@ -89,13 +89,13 @@
   }
   
   .chat-title {
-    color: #7554a0;
+    color: #dedbe2;
     font-weight: 800;
     font-size: 24px;
   }
   
   .chat-subtitle {
-    color: #7554a0;
+    color: #9882b4;
     font-weight: 600;
     font-size: 12px;
     padding-top: 4px;
@@ -161,141 +161,56 @@
   .message-form-container {
     position: absolute;
     bottom: 0px;
-    width: calc(100% - 36px);
+    width: calc(100% - 50px);
     padding: 18px;
-    background-color: rgb(240, 240, 240);
+    
   }
   
   .message-form {
     overflow: hidden;
     border-radius: 6px;
     border: 1px solid #3b2a50;
-    background-color: white;
+    
   }
   
   .message-input {
     height: 40px;
     width: calc(100% - 132px);
-    background-color: white;
-    border: 1px solid white;
+    background-color: rgb(59, 53, 53);
+    border: 1px solid rgb(227, 42, 227);
     padding: 0px 18px;
     outline: none;
     font-size: 15px;
   }
   
   .image-button {
-    cursor: pointer;
+    height: 42px;
+    background-color: rgb(157, 20, 143);
+    border: 3px solid white;
+    border-radius: 4px;
     padding: 0px 12px;
-    height: 100%;
+    cursor: pointer;
+    margin-left: 3px;
+    margin-right: 3px;
   }
   
   .send-button {
     height: 42px;
-    background-color: white;
-    border: 1px solid white;
-    padding: 0px 18px;
+    background-color: rgb(157, 20, 143);
+    border: 2px solid white;
+    padding: 0px 12px;
     cursor: pointer;
   }
   
   .send-icon {
     top: 1px;
     position: relative;
-    transform: rotate(-90deg);
+    transform: rotate(0deg);
   }
   
   .picture-icon {
     top: 1px;
     position: relative;
-    font-size: 14px;
+       
   }
   
-  /* FORM STYLES */
-  *,
-  *::after,
-  *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-size: 62,5%;
-  }
-  
-  .wrapper {
-    height: 100vh;
-      width: 100%;
-    background: rgb(117,84,160);
-    background: linear-gradient(90deg, rgba(117,84,160,1) 7%, rgba(117,84,160,1) 17%, rgba(106,95,168,1) 29%, rgba(99,103,174,1) 44%, rgba(87,116,184,1) 66%, rgba(70,135,198,1) 83%, rgba(44,163,219,1) 96%, rgba(22,188,237,1) 100%, rgba(0,212,255,1) 100%);  
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .input {
-    color: #333;
-    font-size: 1.2rem;
-      margin: 0 auto;
-    padding: 1.5rem 2rem;
-    border-radius: 0.2rem;
-    background-color: rgb(255, 255, 255);
-    border: none;
-    width: 90%;
-    display: block;
-    border-bottom: 0.3rem solid transparent;
-    transition: all 0.3s;
-    outline: none;
-    margin-bottom: 25px;
-  }
-  
-  .form {
-    width: 400px;
-  }
-  
-  .title {
-    text-align: center;
-    color: white;
-    margin-bottom: 30px;
-    width: 100%;
-    font-size: 2.3em;;
-  }
-  
-  .button {
-    border-radius: 4px;
-    border: none;
-    background-color: white;
-    color: black;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 22px;
-    padding: 20px;
-    width: 200px;
-    transition: all 0.4s;
-    cursor: pointer;
-    margin: 5px;
-    width: 90%;
-  }
-  .button span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.4s;
-  }
-  .button span:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-  }
-  .button:hover span {
-    padding-right: 25px;
-  }
-  .button:hover span:after {
-    opacity: 1;
-    right: 0;
-  }
-  
-  .error {
-    color: white;
-    text-align: center;
-    margin-top: 20px;
-  }
