--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
 
-  color-scheme: light;
+  color-scheme: light dark;
   color: rgb(0, 0, 0);
   background-color: #242424;
 
@@ -10,15 +10,20 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  ::-webkit-scrollbar {
+    width: 0; /* Remove scrollbar space */
+    background: transparent; /* Optional: just make scrollbar invisible */
+}
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #b313b6;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #b313b6;
+  font-style: italic;
 }
 
 body {
@@ -46,7 +51,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #d60dab;
 }
 button:focus,
 button:focus-visible {
